--- a/src/Ejercicio-01/solucion/index.html
+++ b/src/Ejercicio-01/solucion/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicio 1: Selectores CSS</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8>"
+    <meta name="yiewport" content="width=device-width,initial-scale=1.0-"
+    <title>Document</title>
+    <link rel="stylesheet" type="test/css herf="style.css"
   </head>
   <body>
-    <p>Este párrafo tiene un color de fondo diferente.</p>
-    <p class="destacado">Este párrafo tiene un borde resaltado.</p>
-    <p id="parrafo-grande">Este párrafo tiene un tamaño de fuente más grande.</p>
+    <h1> ejercicio1-selectores CSS</>
+    <main>
+    <p>Este es el parrafo1>/p>
+    <p class="destacado">Este es el parrafo2>me/p>
+    <p id="parrafo grande">Este es el parrafo3>/p>
+    </main>
   </body>
 </html>
+
